# severstal-coils

./: .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
app/: main.py
app/api/endpoints/: coils.py
app/core/: config.py  database.py
app/domain/: models.py
app/repositories/: coil.py
app/schemas/: coil.py
migrations/: env.py
migrations/versions/: 001_initial.py  a28614ab4514_add_new_column.py
tests/: conftest.py  test_crud_api.py
